[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/skybox_sideHills.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/dirt_grass.png" type="Texture" id=3]
[ext_resource path="res://scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://scenes/Trunk.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/Grave.png" type="Texture" id=6]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )
trunk_scene = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 288, 672 )
scale = Vector2( 2.64566, 2.64566 )
z_index = -10
texture = ExtResource( 1 )

[node name="Ground" type="Node2D" parent="."]
position = Vector2( 352, 1216 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Tile" type="Sprite" parent="Ground"]
position = Vector2( 128, 0 )
texture = ExtResource( 3 )

[node name="Tile2" type="Sprite" parent="Ground"]
texture = ExtResource( 3 )

[node name="Tile3" type="Sprite" parent="Ground"]
position = Vector2( -128, 0 )
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 542.586, 866.829 )

[node name="FirstTrunkPosition" type="Position2D" parent="."]
position = Vector2( 352, 958.413 )

[node name="Grave" type="Sprite" parent="."]
visible = false
position = Vector2( 542.586, 1002.82 )
texture = ExtResource( 6 )

[node name="TimeLeft" type="ProgressBar" parent="."]
margin_left = 166.0
margin_top = 200.0
margin_right = 538.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 186, 0 )
max_value = 5.0
step = 0.01
value = 5.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 109.531
margin_right = 719.0
margin_bottom = 169.531
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CenterContainer"]
margin_left = 329.0
margin_right = 389.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.188235, 0.831373, 0.458824, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartMenu" type="Node2D" parent="."]
visible = false
position = Vector2( -55.4366, 200 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="RestartMenu"]
margin_right = 842.0
margin_bottom = 301.0
color = Color( 0.905882, 0.972549, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartText" type="Label" parent="RestartMenu"]
margin_right = 842.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.890196, 0.2, 0.215686, 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="RestartMenu"]
margin_top = 206.0
margin_right = 842.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.694118, 0.47451, 0.25098, 1 )
custom_colors/font_color = Color( 0.215686, 0.721569, 0.427451, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.721569, 0.427451, 1 )
custom_colors/font_color_pressed = Color( 0.129639, 0.460938, 0.268322, 1 )
text = "Try Again?"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="RestartMenu/RestartButton" to="." method="_on_RestartButton_pressed"]
